[package]
name = "libp2p-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = [
	"tcp",
	"tls",
	"dns",
	"async-std",
	"noise",
	"yamux",
	"websocket",
	"ping",
	"macros",
] }
futures = "0.3.30"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
